Add feature component

--- a/src/containers/whatGPT3/whatGPT3.css
+++ b/src/containers/whatGPT3/whatGPT3.css
@@ -26,7 +26,7 @@
     display: flex;    
  }
 
- .gpt3__whatgpt3-feature .gpt3__features-container-feature{
+ .gpt3__whatgpt3-feature .gpt3__features-container__feature{
     margin: 0;    
  }
 
@@ -64,6 +64,20 @@
     flex-direction: row;
     margin-top: 2rem;
  }
+
+ /* Customizing feature component as per needs */
+ .gpt3__whatgpt3-container .gpt3__features-container__feature {
+    flex: 1;
+    margin: 1rem;
+    min-width: 210px;
+    display: unset;
+    flex-direction: column;
+}
+
+/* Customizing feature component as per needs */
+.gpt3__whatgpt3-container .gpt3__features-container_feature-text {
+    margin-top: 0.5rem;
+}
 
  @media screen and (max-width: 850px) {
     .gpt3__whatgpt3-heading {
